--- a/index.html
+++ b/index.html
@@ -321,22 +321,26 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
 							  Wenjie Xiong <em>(Virginia Tech)</em></td>
                         </tr>
                         <tr bgcolor="#EBF5FB">
-                          <th scope="row">4:00 - 5:00 PM</th>
-                          <td><strong>Panel: <em>to be announced</em></strong><br>
-							  Moderators: Dr. Bharat Sukhwani and Dr. Pradip Bose <em>(IBM Research)</em>
-							  <!--
-							  This panel will debate the future of AI from the view point of society in general and computer architects/scientists in particular.
-							  In many ways, the first indications of scary excitement (beyond normal science fiction giddiness) came in 2011, with Ken Jennings
-							  (human Jeopardy champion) uttering those famous words: <a href="https://www.youtube.com/watch?v=wvSBzKbecmo" target="_blank">«I for
-							  one welcome our new computer overlords!»</a>. Since then, with the steady and steep rise of AI/ML capabilities, the awe and excitement
-							  seems to be turning into downright panic, given the statements being made by some of the modern-day pioneers/catalysts of the AI/ML
-							  revolution as well as notable other scientists and intellectuals.<br>
-							  After the panelists provide their position statements, the floor will be open for Q&A, with questions posed from the audience.
-						      -->
+                          <th scope="row">4:00 - 5:30 PM</th>
+                          <td><strong>Panel: "Data Integrity in Encrypted Computation: Impossible Proposition?"</strong><br>
+							  Recently, there has been a significant increase in privacy-protected, encrypted computation.
+							  The promise of effective hardware acceleration to bring paradigms like FHE (fully homomorphic encryption) within the realms of
+							  practical deployment has fueled newer innovations in the algorithm (software) aspects of this domain as well. At the same time, we
+							  have seen an escalating level of concern about the incidence of silent data corruption (SDC) and other failure modes in recent years.
+							  We have two excellent invited talks to set the stage for an engaging conversation about this topic. One of the talks describes a
+							  leading edge hardware accelerator for FHE computing and the other one talks about novel ways of SDC detection in normal (plaintext)
+							  computation.<br>
+							  <strong>4:00 - 4:10 PM: Panel Introduction</strong><br>
+							  Bharat Sukhwani and Pradip Bose (IBM Research; moderators)<br>
+							  <strong>4:10 - 4:40 PM: "Unlocking the future: Intel HERACLES and The Dawn of Encrypted Computing"</strong><br>
+							  Rosario Cammarota and Chris Wilkerson, Intel Corp.<br>
+							  <strong>4:40 - 5:10 PM: "Leveraging Canary Flip-Flops in MISR for Superior SDC Detection"</strong><br>
+							  Alexander Coyle, Hui Jiang, Jennifer Dworak, Theodore Manikas, and Kundan Nepal,” Southern Methodist University<br>
+							  <strong>5:10 - 5:30 PM:</strong> Discussion and Q&A (moderated)
 						  </td>
                         </tr>						
                         <tr>
-                          <th scope="row">5:00 PM</th>
+                          <th scope="row">5:30 PM</th>
                           <td>Concluding Remarks</td>
                         </tr>
                       </tbody>
