--- a/index.html
+++ b/index.html
@@ -210,47 +210,70 @@
 
     <section id="speakers" class="section speakers">
         <div class="container">
-            <div class="row">
-              <div class="col-md-12">
-                <h3 class="section-title">Keynote Speakers</h3>
-				<em>To be announced</em>
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="section-title">Invited Speakers</h3>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-2">
+              <div class="speaker">
+                <figure>
+                  <img alt="" class="img-responsive center-block" src="assets/images/speakers/ajay-joshi.jpg" style="border-radius:50%;width:300px;" data-toggle="popover"
+				  data-container="body" data-placement="top" data-content="With the monetization of user data, data breaches in the cloud have become very common. In
+				  2022, there were close to 2,000 data breaches in the cloud, with the global average cost per data breach close to $5M. Therefore, the need for
+				  maintaining data security and privacy is becoming increasingly critical. Fully Homomorphic Encryption (FHE) has emerged as a potential solution as it
+				  enables computing on encrypted data. With FHE, one can provide strong data security and privacy guarantees. Unfortunately, operating on encrypted data
+				  is slow. We need innovations on both the cloud side and edge side to make FHE-based cloud computing practical.<br><br>
+				  In this talk, I'll first use our FHE profiling results to discuss opportunities and challenges for FHE-based cloud computing. Then I'll present our
+				  recent work (on both the cloud side and edge side) towards making FHE-based cloud computing practical. For accelerating the cloud-side operations,
+				  I'll present our efforts on Memory-Aware Design (MAD) techniques for FHE, an FPGA-based Accelerator for Bootstrappable FHE (FAB), and GPU-based
+				  Microarchitectural Extensions (GME) for FHE. For accelerating the edge-side operations, I'll present our work on RISC-V SoC for En/decryption Acceleration (RISE).">
+                </figure>
               </div>
             </div>
-<!--
-            <div class="row">
-              <div class="col-md-2">
-                  <div class="speaker">
-                  <figure>
-                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/jennifer.png" style="border-radius:50%;width:300px;" data-toggle="popover" data-container="body" data-placement="top" data-content="The massive scale of today’s data centers has recently led to the realization that silent data corruption (SDC) is a significant problem.  Instead of the soft errors that have previously been a main focus of online error detection schemes, many of these errors seem to be arising from test escapes, latent defects, or the impact of aging.  As a result, repeated field testing is becoming a critical need to find these defects and prevent SDC.  To do this well, field testing must be both highly effective and efficient.   This talk will present several Design for Test (DFT) circuit structures that can be used to make the best use of test time in the field—in some cases allowing the number of effective patterns applied to grow by a factor of 50, 100, or more without increasing test time.">
-                  </figure>
-                </div>
-             </div>
-             <div class="col-sm-10">
-                    <h3>Circuit Structures for Enhancing Efficient Defect Detection</h3>
-                    <h4>Jennifer Dworak (SMU)</h4><p>
-                        Jennifer Lynn Dworak is a Professor in the Department of Electrical and Computer Engineering at Southern Methodist University. Her research interests include manufacturing test, the reliability of digital circuits and systems, and hardware security.  Her research is currently funded by the National Science Foundation and the Semiconductor Research Corporation, and she is a recipient of an NSF CAREER Award and a 2012 Ralph E. Powe Junior Faculty Enhancement Award funded by Oak Ridge Associated Universities.  She is an author on multiple technical articles, including two papers that won a Best Paper Award from the VLSI Test Symposium and a paper that won a TTTC Naveena Nagi Award. She has also given over 30 invited talks and been an invited panelist at technical meetings throughout the world. Jennifer holds PhD, MS, and BS degrees in electrical engineering from Texas A&M University in College Station, TX.</p>
-                    
+            <div class="col-sm-10">
+              <h3>Fully Homomorphic Encryption-based Cloud Computing: Opportunities, Challenges, and (Some) Solutions</h3>
+                <h4>Ajay Joshi (Boston University)</h4>
+				<p>
+					Ajay Joshi is a Professor in the ECE department at Boston University. Before joining BU, he got his Ph.D. at Georgia Tech and then
+					worked as a postdoc at MIT. He was a Visiting Researcher at Google in 2017-18 and is currently an Architect at Lightmatter Inc.
+					His research is in the areas of computer architecture and digital VLSI with a focus on security and privacy, machine learning, and
+					photonic computing. He received the NSF CAREER Award in 2012, Boston University ECE Department's Award for Excellence in Teaching
+					in 2014, Best Paper Awards at ASIACCS 2018 and HOST 2023, and the Google Faculty Research Award in 2018 and 2019. He currently serves
+					as the Associate Editor for IEEE Transactions on VLSI Systems.
+				</p>
             </div>
-             </div>
+          </div>
+
           <div class="row">
-              <div class="col-md-2">
-                  <div class="speaker">
-                  <figure>
-                    <img alt="" class="img-responsive center-block" src="assets/images/speakers/daniel.jpeg" style="border-radius:50%;width:300px;" data-toggle="popover" data-container="body" data-placement="top"data-content="">
-                  </figure>
-                </div>
-             </div>
-             <div class="col-sm-10">
-               <h3>An Architecture to Accelerate Computation on Encrypted Data</h3>
-               <h4>Daniel Sanchez (MIT)</h4>
-               <p>Daniel Sanchez is an Associate Professor at MIT's Electrical Engineering and Computer Science Department and a member of the Computer Science and Artificial Intelligence Laboratory. He works in computer architecture and computer systems. His current research focuses on large-scale multicores with hundreds to thousands of cores, scalable and efficient memory hierarchies, architectures with quality-of-service guarantees, and scalable runtimes and schedulers.
-Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineering from Stanford University, where he worked with Professor Christos Kozyrakis. Daniel Sanchez has also received an M.S. in Electrical Engineering from Stanford (2009) and a B.S. in Telecommunications Engineering from the Technical University of Madrid, UPM (2007).
-               </p>
+            <div class="col-md-2">
+              <div class="speaker">
+                <figure>
+                  <img alt="" class="img-responsive center-block" src="assets/images/speakers/brandon-reagen.jpg" style="border-radius:50%;width:300px;"
+				  data-toggle="popover" data-container="body" data-placement="top" data-content="<em>To be announced</em>">
+                </figure>
+              </div>
             </div>
-        </div>
-      </div>
-    </section>
--->
+            <div class="col-sm-10">
+              <h3>Title: <em>to be announced</em></h3>
+                <h4>Brandon Reagen (New York University)</h4>
+				<p>
+					Brandon Reagen is an Assistant Professor in the Department of Electrical and Computer Engineering with affiliation appointments in
+					the Computer Science. He earned a PhD in computer science from Harvard in 2018 and received his undergraduate degrees in computer
+					systems engineering and applied mathematics from the University of Massachusetts, Amherst, in 2012.<br>
+					A computer architect by training, Brandon has a research focus on designing specialized hardware accelerators for applications
+					including deep learning and privacy preserving computation. He has made several contributions to ease the use accelerators as
+					general architectural constructs including benchmarking, simulation infrastructure, and System on a Chip (SoC) design. He has led
+					the way in highly efficient and accurate deep learning accelerator design with his studies of principled unsafe optimizations, and
+					his work has been published in conferences ranging from computer architecture, machine learning, computer aided design, and circuits.<br>
+					Prior to joining NYU, he was a research scientist with Facebook’s AI Infrastructure Research working on privacy preserving machine
+					learning and systems for neural recommendation. During his PhD he was a Siebel Scholar (2018) and was selected as a 2018 Rising Star
+					in Computer Architecture by Georgia Tech.					
+				</p>
+            </div>
+          </div>
 
         </div>
     </section>
@@ -275,7 +298,7 @@ Before joining MIT in September 2012, He earned a Ph.D. in Electrical Engineerin
                         </tr>
                         <tr bgcolor="#EBF5FB">
                           <th scope="row">9:00 - 10:00 AM</th>
-                          <td><strong>Invited Talk:</strong> <em>To be announced</em><br>
+                          <td><strong>Invited Talk: Fully Homomorphic Encryption-based Cloud Computing: Opportunities, Challenges, and (Some) Solutions</strong><br>
 							  Prof. Ajay Joshi <em>(Boston University)</em></td>
                         </tr>
                         <tr bgcolor="#FEF9E7">
