--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               <h3>Fully Homomorphic Encryption-based Cloud Computing: Opportunities, Challenges, and (Some) Solutions</h3>
                 <h4>Ajay Joshi (Boston University)</h4>
 				<p>
-					Ajay Joshi is a Professor in the ECE department at Boston University. Before joining BU, he got his Ph.D. at Georgia Tech and then
+					<strong>Ajay Joshi</strong> is a Professor in the ECE department at Boston University. Before joining BU, he got his Ph.D. at Georgia Tech and then
 					worked as a postdoc at MIT. He was a Visiting Researcher at Google in 2017-18 and is currently an Architect at Lightmatter Inc.
 					His research is in the areas of computer architecture and digital VLSI with a focus on security and privacy, machine learning, and
 					photonic computing. He received the NSF CAREER Award in 2012, Boston University ECE Department's Award for Excellence in Teaching
@@ -252,25 +252,59 @@
               <div class="speaker">
                 <figure>
                   <img alt="" class="img-responsive center-block" src="assets/images/speakers/brandon-reagen.jpg" style="border-radius:50%;width:300px;"
-				  data-toggle="popover" data-container="body" data-placement="top" data-content="<em>To be announced</em>">
+				  data-toggle="popover" data-container="body" data-placement="top" data-content="In this talk I will review the technologies and challenges that combine
+				  to enable and restrain confidential machine learning. This includes the issues nonlinear functions pose to efficient (and effective) inference as well
+				  as the computational, communication, and storage issues and what can be done at the algorithm, software, and architecture level to remedy them.">
                 </figure>
               </div>
             </div>
             <div class="col-sm-10">
-              <h3>Title: <em>to be announced</em></h3>
+              <h3>Towards Practical Privacy-Preserving Neural Inference</em></h3>
                 <h4>Brandon Reagen (New York University)</h4>
 				<p>
-					Brandon Reagen is an Assistant Professor in the Department of Electrical and Computer Engineering with affiliation appointments in
-					the Computer Science. He earned a PhD in computer science from Harvard in 2018 and received his undergraduate degrees in computer
-					systems engineering and applied mathematics from the University of Massachusetts, Amherst, in 2012.<br>
-					A computer architect by training, Brandon has a research focus on designing specialized hardware accelerators for applications
-					including deep learning and privacy preserving computation. He has made several contributions to ease the use accelerators as
-					general architectural constructs including benchmarking, simulation infrastructure, and System on a Chip (SoC) design. He has led
-					the way in highly efficient and accurate deep learning accelerator design with his studies of principled unsafe optimizations, and
-					his work has been published in conferences ranging from computer architecture, machine learning, computer aided design, and circuits.<br>
-					Prior to joining NYU, he was a research scientist with Facebook’s AI Infrastructure Research working on privacy preserving machine
-					learning and systems for neural recommendation. During his PhD he was a Siebel Scholar (2018) and was selected as a 2018 Rising Star
-					in Computer Architecture by Georgia Tech.					
+					<strong>Brandon Reagen</strong> is an Assistant Professor at New York University in the Tandon school of engineering. He received his Ph.D from Harvard
+					in 2018 and undergraduate degree from the University of Massachusetts, Amherst in 2012. His research focuses on novel hardware accelerator
+					designs for high performance and low power with applications in privacy preserving computation, including homomorphic encryption and secure
+					multi-party computation.					
+				</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-2">
+              <div class="speaker">
+                <figure>
+                  <img alt="" class="img-responsive center-block" src="assets/images/speakers/ro-cammarota.jpg" style="border-radius:50%;width:300px;"
+				  data-toggle="popover" data-container="body" data-placement="top" data-content="">
+                </figure>
+              </div>
+            </div>
+            <div class="col-sm-10">
+              <h3>Unlocking the future: Intel HERACLES and The Dawn of Encrypted Computing</em></h3>
+                <h4>Rosario Cammarota and Chris Wilkerson (Intel Corp.)</h4>
+				<p>
+					<strong>Rosario Cammarota</strong>, "Ro," is a principal engineer and Chief Scientist of Privacy-Enhanced Computing Research in the Emerging Security Lab at
+					Intel Labs. His work includes the theory, application, and standardization of processing encrypted data. Cammarota is the principal investigator
+					for the DARPA DPRIVE program and Intel academic centers focusing on privacy, cryptography, and security mechanisms, and leads standardization of
+					methods for encrypted data processing with FHE at ISO/IEC. He received his Ph.D. in Computer Science from the University of California Irvine in
+					2013. He is a prolific author and inventor, publishing over 50 peer-reviewed articles and opening more than 50 US patents. Ro Cammarota is a Senior
+					Member of IEEE and recipient of the SRC “Mahboob Khan” Outstanding Industry Liaison Award in 2017, 2018, and 2019.					
+				</p>
+            </div>
+            <div class="col-md-2">
+              <div class="speaker">
+                <figure>
+                  <img alt="" class="img-responsive center-block" src="assets/images/speakers/chris-wilkerson.jpg" style="border-radius:50%;width:300px;"
+				  data-toggle="popover" data-container="body" data-placement="top" data-content="">
+                </figure>
+              </div>
+            </div>
+            <div class="col-sm-10">
+				<p>
+					<strong>Chris Wilkerson</strong> is a Principal Engineer at Intel Corporation and has been in the industry for 26 years including 22 at Intel. Chris has worked on
+					a range of micro-architecture topics including low voltage micro architecture and circuits, low power, reliable design, out-of-order processor
+					design with particular focus on branch prediction, run-ahead processing, prefetching, cache architecture, cache replacement algorithms, etc. Chris
+					is currently the Principal Memory Architect on Intel’s DARPA funded DPRIVE Program developing an FHE accelerator.					
 				</p>
             </div>
           </div>
@@ -326,7 +360,7 @@
                         </tr>
                         <tr bgcolor="#EBF5FB">
                           <th scope="row">1:30 - 2:30 PM</th>
-                          <td><strong>Invited Talk:</strong> <em>To be announced</em><br>
+                          <td><strong>Invited Talk: Towards Practical Privacy-Preserving Neural Inference</strong><br>
 							  Prof. Brandon Reagen <em>(New York University)</em></em></td>
                         </tr>
                         <tr>
