--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 					as the Associate Editor for IEEE Transactions on VLSI Systems.
 				</p>
             </div>
-          </div>
+          </div> <!-- "row" -->
 
           <div class="row">
             <div class="col-md-2">
@@ -259,7 +259,7 @@
               </div>
             </div>
             <div class="col-sm-10">
-              <h3>Towards Practical Privacy-Preserving Neural Inference</em></h3>
+              <h3>Towards Practical Privacy-Preserving Neural Inference</h3>
                 <h4>Brandon Reagen (New York University)</h4>
 				<p>
 					<strong>Brandon Reagen</strong> is an Assistant Professor at New York University in the Tandon school of engineering. He received his Ph.D from Harvard
@@ -268,7 +268,7 @@
 					multi-party computation.					
 				</p>
             </div>
-          </div>
+          </div> <!-- "row" -->
 
           <div class="row">
             <div class="col-md-2">
@@ -280,7 +280,7 @@
               </div>
             </div>
             <div class="col-sm-10">
-              <h3>Unlocking the future: Intel HERACLES and The Dawn of Encrypted Computing</em></h3>
+              <h3>Unlocking the future: Intel HERACLES and The Dawn of Encrypted Computing</h3>
                 <h4>Rosario Cammarota and Chris Wilkerson (Intel Corp.)</h4>
 				<p>
 					<strong>Rosario Cammarota</strong>, "Ro," is a principal engineer and Chief Scientist of Privacy-Enhanced Computing Research in the Emerging Security Lab at
@@ -307,8 +307,9 @@
 					is currently the Principal Memory Architect on Intel’s DARPA funded DPRIVE Program developing an FHE accelerator.					
 				</p>
             </div>
-          </div>
+          </div> <!-- "row" -->
 
+          <div class="row">
         </div>
     </section>
 
