Camera-ready manuscripts uploaded

--- a/index.html
+++ b/index.html
@@ -342,17 +342,20 @@
                         </tr>
                         <tr>
                           <th scope="row">10:30 - 11:00 AM</th>
-                          <td>"Fully Homomorphic Encryption for Computer Architects: A Fundamental Characterization Study"<br>
+                          <td>"Fully Homomorphic Encryption for Computer Architects: A Fundamental Characterization Study" 
+							  <a href="assets/pdfs/DISCC_2023_paper_5.pdf" rel="nofollow" target="_blank">(paper)</a><br>
 							  Subhankar Pal <em>et al.</em> <em>(IBM Research)</em></td>
                         </tr>
                         <tr>
                           <th scope="row">11:00 - 11:30 AM</th>
-                          <td>"Toward Practical Privacy-Preserving FHE CNN"<br>
+                          <td>"Toward Practical Privacy-Preserving Convolutional Neural Networks Exploiting Fully Homomorphic Encryption" 
+							  <a href="assets/pdfs/DISCC_2023_paper_4.pdf" rel="nofollow" target="_blank">(paper)</a><br>
 							  Jaiyoung Park <em>et al.</em> <em>(Seoul National University)</em></td>
                         </tr>
                         <tr>
                           <th scope="row">11:30 - 12:00 PM</th>
-                          <td>"Accelerating Garbled Circuits by Hardware-Software Co-Design"<br>
+                          <td>"Accelerating Garbled Circuits by Hardware-Software Co-Design" 
+							  <a href="assets/pdfs/DISCC_2023_paper_2.pdf" rel="nofollow" target="_blank">(paper)</a><br>
 							  Jianqiao Mo and Brandon Reagen <em>(New York University)</em></td>
                         </tr>
                         <tr bgcolor="#FEF9E7">
@@ -375,7 +378,8 @@
                         </tr>
                         <tr>
                           <th scope="row">3:30 - 4:00 PM</th>
-                          <td>"SecNDP: Secure Near-Data Processing with Untrusted Memory"<br>
+                          <td>"SecNDP: Secure Near-Data Processing with Untrusted Memory" 
+							  <a href="https://eprint.iacr.org/2021/1642" rel="nofollow" target="_blank">(paper)</a><br>
 							  Wenjie Xiong <em>(Virginia Tech)</em></td>
                         </tr>
                         <tr bgcolor="#EBF5FB">
